# k1921vk035-pac

./: Cargo.toml  K1921VK035.svd  device.x  readme.md
src/: adc.rs  can.rs  canmsg.rs  dma.rs  ecap0.rs  gpioa.rs  i2c.rs  lib.rs  mflash.rs  pmu.rs  pwm0.rs  qep.rs  rcu.rs  siu.rs  spi.rs  tmr0.rs  uart0.rs  wdt.rs
src/adc/: actl.rs  bstat.rs  chctl.rs  cicnt.rs  dc.rs  dctrig.rs  emux.rs  fstat.rs  ic.rs  im.rs  mis.rs  ris.rs  seq.rs  seqen.rs  seqsync.rs
src/can/: clc.rs  fdr.rs  id.rs  list.rs  mcr.rs  mitr.rs  msid.rs  mspnd.rs  node.rs  panctr.rs
src/canmsg/: msg.rs
src/dma/: altbaseptr.rs  baseptr.rs  cfg.rs  enclr.rs  enset.rs  errclr.rs  prialtclr.rs  prialtset.rs  priorityclr.rs  priorityset.rs  reqmaskclr.rs  reqmaskset.rs  status.rs  swreq.rs  useburstclr.rs  useburstset.rs  waitonreq.rs
src/ecap0/: cap0.rs  cap1.rs  cap2.rs  cap3.rs  cmp.rs  cmpshdw.rs  ctrphs.rs  ecclr.rs  ecctl0.rs  ecctl1.rs  eceint.rs  ecflg.rs  ecfrc.rs  peint.rs  prd.rs  prdshdw.rs  tsctr.rs
src/gpioa/: adcsocclr.rs  adcsocset.rs  altfuncclr.rs  altfuncset.rs  data.rs  dataout.rs  dataoutclr.rs  dataoutset.rs  dataouttgl.rs  denclr.rs  denset.rs  dmareqclr.rs  dmareqset.rs  drivemode.rs  inmode.rs  intedgeclr.rs  intedgeset.rs  intenclr.rs  intenset.rs  intpolclr.rs  intpolset.rs  intstatus.rs  inttypeclr.rs  inttypeset.rs  lockclr.rs  lockkey.rs  lockset.rs  lockstat.rs  maskhb.rs  masklb.rs  outenclr.rs  outenset.rs  outmode.rs  pullmode.rs  qualclr.rs  qualmodeclr.rs  qualmodeset.rs  qualsample.rs  qualset.rs  rxevclr.rs  (+3 more)
src/i2c/: addr.rs  cst.rs  ctl0.rs  ctl1.rs  (+6 more)
(+176 files in other folders)
