[package]
name = "k1921vk035-pac"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Smirnov <taunrise@gmail.com>"]
build = "build.rs"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "niiet", "svd2rust",]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "The peripheral access crate for k1921vk035."
repository = "https://github.com/tverka/k1921vk035-pac"
homepage = "https://github.com/tverka/k1921vk035-pac"

[badges]
maintenance = { status = "experimental" }

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.4", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]

